<resources>

    <string name="app_name">AutumWorkout</string>
    <string name="date_text">Date: </string>
    <string name="reps_count_text"> Number of repetitions: </string>
    <string name="weight_text">Weight: </string>
    <string name="kg">kg.</string>
    <string name="save"> Save record </string>
    <string name="workout_detail_title">Exercise name </string>
    <string name="workout_detail_record">Records </string>
    <string name="workout_detail_description"> This is a long text to check for scrolling. This is a long text to check for scrolling. This is a long text to check for scrolling.This is a long text to check for scrolling.This is a long text to check for scrolling.This is a long text to check for scrolling.This is a long text to check for scrolling.This is a long text to check for scrolling.This is a long text to check for scrolling.This is a long text to check for scrolling.This is a long text to check for scrolling.This is a long text to check for scrolling.This is a long text to check for scrolling.This is a long text to check for scrolling.This is a long text to check for scrolling.This is a long text to check for scrolling.This is a long text to check for scrolling.This is a long text to check for scrolling.This is a long text to check for scrolling.This is a long text to check for scrolling.</string>

    <string name="lifting_the_rod">lifting the rod</string>
    <string name="pull_ups">pull ups</string>
    <string name="jogging">jogging</string>
    <string name="record_distance">Record distance: </string>
    <string name="distance_text">Distance (meter)</string>
    <string name="meter">meter</string>

    <string name="title_mock_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, culpa dignissimos doloribus est explicabo fuga labore nisi repudiandae voluptate voluptatem.</string>
    <string name="description_mock_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus autem culpa doloribus earum enim, error exercitationem fugiat in ipsum iusto minus neque non obcaecati pariatur perspiciatis quaerat quas qui saepe sed similique sunt ullam!</string>
</resources>
