<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:background="@color/colorAccent"/>
            <!--android:src="@drawable/ic_launcher_background"-->
            <Button
                android:id="@+id/lifting_the_rod_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lifting_the_rod"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:background="@color/colorAccent"/>
            <!--android:src="@drawable/ic_launcher_background"-->
            <Button
                android:id="@+id/pull_ups_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pull_ups"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:background="@color/colorAccent"/>
            <!--android:src="@drawable/ic_launcher_background"-->
            <Button
                android:id="@+id/jogging_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jogging"/>
        </LinearLayout>


    </LinearLayout>

</ScrollView>